apply plugin: 'java'

def utf8 = 'UTF-8'

repositories {
	mavenCentral()
}

dependencies {
	testImplementation 'junit:junit:+'
	testImplementation 'org.assertj:assertj-core:+'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:+'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:+'
}

compileJava {
	options.encoding = utf8
	sourceCompatibility = '11'
	targetCompatibility = '11'
}

test {
	useJUnitPlatform()
}

javadoc {
	exclude 'qxsl/extra/**'
	options.links('https://docs.oracle.com/en/java/javase/11/docs/api/')
	options.charSet = utf8
	options.encoding = utf8
}
